--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -4,17 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="3dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="2dp"
+    android:layout_margin="5dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="14dp">
-
 
         <TextView
             android:id="@+id/tv_name"
